--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ python = "^3.6"
 cleo = "^0.7"
 requests = "^2.2"
 bjoern = "^3.0"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.1.0"
