Code coverage added

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,6 @@ jobs:
         - pre-commit install-hooks
       script:
         - pre-commit run --all-files
+      after-script:
+        - pip install codecov
+        - codecov
