--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,6 @@ jobs:
     - stage: codecov
       python: "3.6"
       script:
+        - pytest --ignore venv -W ignore::DeprecationWarning --cov=opyapi --cov=tests --cov-report=term-missing
         - pip install codecov
         - codecov
