--- a/.travis.yml
+++ b/.travis.yml
@@ -21,22 +21,8 @@ install:
 
 script: pytest -q tests/
 
-jobs:
-  include:
-    - python: "3.6"
-    - python: "3.7"
-      dist: xenial
 
-    - stage: linting
-      python: "3.6"
-      install:
-        - pip install pre-commit
-        - pre-commit install-hooks
-      script:
-        - pre-commit run --all-files
-    - stage: codecov
-      python: "3.6"
-      script:
-        - pytest --ignore venv -W ignore::DeprecationWarning --cov=opyapi --cov=tests --cov-report=term-missing
-        - pip install codecov
-        - codecov
+linting:
+	stage: linting
+	script:
+	  - echo "asd"
